# synth

./: .gitignore  Cargo.toml  iconic-synth-sounds-research.md  prophet5-technical-reference.md
.github/workflows/: deploy-dev.yml  deploy-qa.yml  deploy.yml  terraform.yml
crates/audio-test-harness/: Cargo.toml
crates/braids-dsp/: Cargo.toml
crates/braids-wasm/: Cargo.toml
crates/dsp-common/: Cargo.toml
crates/fx-dsp/: Cargo.toml
crates/fx-wasm/: Cargo.toml
crates/prophet-dsp/: Cargo.toml
crates/prophet-plugin/: Cargo.toml
crates/prophet-wasm/: Cargo.toml
crates/sampler-dsp/: Cargo.toml
crates/sampler-wasm/: Cargo.toml
crates/tb303-dsp/: Cargo.toml
crates/tb303-wasm/: Cargo.toml
crates/tr808-dsp/: Cargo.toml
crates/tr808-wasm/: Cargo.toml
crates/tr909-dsp/: Cargo.toml
crates/volca-bass-dsp/: Cargo.toml
crates/volca-bass-wasm/: Cargo.toml
design/: ORBIT_DESIGN_LANGUAGE.md  ORBIT_DESIGN_LANGUAGE.md:Zone.Identifier  ORBIT_DESIGN_LANGUAGE.md:mshield  ORBIT_PRD.md  ORBIT_PRD.md:Zone.Identifier  ORBIT_PRD.md:mshield
infra/: bootstrap-tfstate.sh  instructions.md  main.tf  terraform.tfvars.example  variables.tf
orbit/: index.html  package-lock.json  package.json  vite.config.ts
orbit/public/: braids-worklet.js  prophet-worklet.js  synth-worklets.js  tb303-worklet.js  tr808.wasm  worklet-processor.js
orbit/src/: App.svelte  constants.ts
scripts/: build-web.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-808/: index.html
web-808/public/: tr808.wasm  worklet-processor.js
(+191 files in other folders)
