[workspace]
members = [
    "crates/audio-test-harness",
    "crates/dsp-common",
    "crates/fx-dsp",
    "crates/fx-wasm",
    "crates/volca-bass-dsp",
    "crates/volca-bass-wasm",
    "crates/sampler-dsp",
    "crates/sampler-wasm",
    "crates/prophet-dsp",
    "crates/prophet-plugin",
    "crates/prophet-wasm",
    "crates/tr808-dsp",
    "crates/tr808-wasm",
    "crates/tr909-dsp",
    "crates/tb303-dsp",
    "crates/tb303-wasm",
    "crates/braids-dsp",
    "crates/braids-wasm",
    "xtask",
]
resolver = "2"
